--- a/test/Jenkinsfile
+++ b/test/Jenkinsfile
@@ -23,8 +23,10 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 dir('test') {
-                    // Build Docker image using bat command for Windows
-                    bat 'docker build -t ${DOCKER_REGISTRY}/${DOCKER_IMAGE} .'
+                    // Build Docker image using bat command for Windows with correct variable substitution
+                    bat """
+                        docker build -t ${DOCKER_REGISTRY}/${DOCKER_IMAGE} .
+                    """
                 }
             }
         }
@@ -40,7 +42,7 @@ pipeline {
                     }
                     
                     // Push Docker image to DockerHub
-                    bat 'docker push ${DOCKER_REGISTRY}/${DOCKER_IMAGE}'
+                    bat "docker push ${DOCKER_REGISTRY}/${DOCKER_IMAGE}"
                 }
             }
         }
