--- a/test/Jenkinsfile
+++ b/test/Jenkinsfile
@@ -1,65 +1,51 @@
 pipeline {
     agent any
-    
+
     environment {
-        // Define environment variables for credentials and image names
-        DOCKER_IMAGE = 'myimage'
-        GITHUB_REPO = 'https://github.com/SelimRiahi/test-jenk'
         DOCKER_REGISTRY = 'docker.io'
-        DOCKER_CREDENTIALS = 'dockerhub-credentials'  // Replace with your Jenkins DockerHub credentials ID
-        GITHUB_CREDENTIALS = 'github-token'  // Replace with your GitHub credentials ID
+        DOCKER_IMAGE = 'myimage'  // Replace with your desired image name
     }
-    
+
     stages {
-        stage('Checkout GitHub Repo') {
+        stage('Checkout GitHub Repository') {
             steps {
-                script {
-                    // Checkout GitHub repository
-                    checkout scm
-                }
+                checkout scm
             }
         }
 
         stage('Build Docker Image') {
             steps {
-                dir('test') {
-                    // Build Docker image using bat command for Windows with correct variable substitution
-                    bat """
-                        docker build -t ${DOCKER_REGISTRY}/${DOCKER_IMAGE} .
-                    """
+                dir('test') {  // Make sure 'test' is the correct directory where your Dockerfile is
+                    script {
+                        // Build the Docker image
+                        bat "docker build -t ${DOCKER_REGISTRY}/${DOCKER_IMAGE} ."
+                    }
                 }
             }
         }
 
         stage('Push Docker Image') {
             steps {
-                script {
-                    // Log in to DockerHub using credentials
-                    withCredentials([usernamePassword(credentialsId: "${DOCKER_CREDENTIALS}", usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                withCredentials([usernamePassword(credentialsId: 'dockerhub-credentials', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                    script {
+                        // Docker login using the token stored in Jenkins credentials
                         bat """
-                            echo ${DOCKER_PASS} | docker login -u ${DOCKER_USER} --password-stdin
+                            echo %DOCKER_PASS% | docker login -u %DOCKER_USER% --password-stdin
                         """
                     }
-                    
-                    // Push Docker image to DockerHub
+                }
+
+                script {
+                    // Push the Docker image to Docker Hub
                     bat "docker push ${DOCKER_REGISTRY}/${DOCKER_IMAGE}"
                 }
             }
         }
-
-        stage('Clean Up') {
-            steps {
-                // Clean up Docker images to save space
-                bat 'docker system prune -f'
-            }
-        }
     }
-    
+
     post {
         always {
-            // Archive the build logs or other artifacts if necessary
-            archiveArtifacts allowEmptyArchive: true, artifacts: '**/*.log'
-            cleanWs()  // Clean workspace after build
+            cleanWs()  // Clean up workspace after execution
         }
     }
 }
