--- a/test/Jenkinsfile
+++ b/test/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
     stages {
         stage('Clone Repository') {
             steps {
-                git credentialsId: 'github-token', url: 'https://github.com/SelimRiahi/test-jenk.git'
+                git branch: 'main', credentialsId: 'github-token', url: 'https://github.com/SelimRiahi/test-jenk.git'
             }
         }
 
