--- a/test/Jenkinsfile
+++ b/test/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
             steps {
                 script {
                     dir('test') {
-                        sh 'docker build -t selimrh125/static-api:latest .'
+                        bat 'docker build -t selimrh125/static-api:latest .'
                     }
                 }
             }
@@ -27,7 +27,7 @@ pipeline {
             steps {
                 script {
                     docker.withRegistry('https://index.docker.io/v1/', 'dockerhub-credentials') {
-                        sh 'docker push selimrh125/static-api:latest'
+                        bat 'docker push selimrh125/static-api:latest'
                     }
                 }
             }
