--- a/test/Jenkinsfile
+++ b/test/Jenkinsfile
@@ -4,6 +4,9 @@ pipeline {
     environment {
         DOCKERHUB_CREDENTIALS = credentials('dockerhub-credentials')
         GITHUB_CREDENTIALS = credentials('github-token')
+        NEXUS_CREDENTIALS = credentials('nexus-credentials')
+        NEXUS_URL = 'http://localhost:8082'
+        NEXUS_REPOSITORY = 'docker-hosted'
     }
 
     stages {
@@ -22,6 +25,7 @@ pipeline {
                 }
             }
         }
+
         stage('Run Docker Container') {
             steps {
                 script {
@@ -30,11 +34,20 @@ pipeline {
             }
         }
 
-        stage('Push Docker Image') {
+        stage('Tag Docker Image for Nexus') {
             steps {
                 script {
-                    docker.withRegistry('https://index.docker.io/v1/', 'dockerhub-credentials') {
-                        bat 'docker push selimrh125/static-api:latest'
+                    bat "docker tag selimrh125/static-api:latest ${NEXUS_URL}/${NEXUS_REPOSITORY}/static-api:latest"
+                }
+            }
+        }
+
+        stage('Push Docker Image to Nexus') {
+            steps {
+                script {
+                    withCredentials([usernamePassword(credentialsId: 'nexus-credentials', passwordVariable: 'NEXUS_PASSWORD', usernameVariable: 'NEXUS_USERNAME')]) {
+                        bat "docker login -u ${NEXUS_USERNAME} -p ${NEXUS_PASSWORD} ${NEXUS_URL}"
+                        bat "docker push ${NEXUS_URL}/${NEXUS_REPOSITORY}/static-api:latest"
                     }
                 }
             }
