--- a/test/Jenkinsfile
+++ b/test/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         DOCKERHUB_CREDENTIALS = credentials('dockerhub-credentials')
         GITHUB_CREDENTIALS = credentials('github-token')
         NEXUS_CREDENTIALS = credentials('nexus-credentials')
-        NEXUS_URL = 'http://localhost:8082'
+        NEXUS_URL = 'localhost:8082'
         NEXUS_REPOSITORY = 'docker-hosted'
     }
 
