--- a/test/Jenkinsfile
+++ b/test/Jenkinsfile
@@ -54,7 +54,7 @@ pipeline {
             steps {
                 script {
                     withCredentials([usernamePassword(credentialsId: 'nexus-credentials', passwordVariable: 'NEXUS_PASSWORD', usernameVariable: 'NEXUS_USERNAME')]) {
-                        bat "docker login -u ${NEXUS_USERNAME} -p ${NEXUS_PASSWORD} ${NEXUS_URL}"
+                        bat "echo ${NEXUS_PASSWORD} | docker login -u ${NEXUS_USERNAME} --password-stdin ${NEXUS_URL}"
                         bat "docker push ${NEXUS_URL}/${NEXUS_REPOSITORY}/static-api:latest"
                     }
                 }
