--- a/test/Jenkinsfile
+++ b/test/Jenkinsfile
@@ -3,10 +3,10 @@ pipeline {
 
     environment {
         DOCKERHUB_CREDENTIALS = credentials('dockerhub-credentials')
-        GITHUB_CREDENTIALS = credentials('github-token')
-        NEXUS_CREDENTIALS = credentials('nexus-credentials')
-        NEXUS_URL = 'localhost:8050'
-        NEXUS_REPOSITORY = 'repository/docker-hosted'
+        GITHUB_CREDENTIALS  = credentials('github-token')
+        NEXUS_DOCKER_CRED   = credentials('nexus-docker-credentials')
+        // Adjust this URL to your Nexus Docker hosted repo (e.g., "localhost:8081" might change to your actual host/port)
+        NEXUS_DOCKER_REPO   = 'localhost:8081/repository/docker-hosted'
     }
 
     stages {
@@ -19,17 +19,11 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
+                    // Change directory if necessary (here "test" folder)
                     dir('test') {
-                        bat 'docker build -t selimrh125/static-api:latest .'
+                        // Tag image with your Nexus repository URL
+                        bat 'docker build -t %NEXUS_DOCKER_REPO%/static-api:latest .'
                     }
-                }
-            }
-        }
-
-        stage('Remove Existing Docker Container') {
-            steps {
-                script {
-                    bat 'docker rm -f static-api || echo "No existing container to remove"'
                 }
             }
         }
@@ -37,15 +31,8 @@ pipeline {
         stage('Run Docker Container') {
             steps {
                 script {
-                    bat 'docker run -d -p 3000:3000 --name static-api selimrh125/static-api:latest'
-                }
-            }
-        }
-
-        stage('Tag Docker Image for Nexus') {
-            steps {
-                script {
-                    bat "docker tag selimrh125/static-api:latest ${NEXUS_URL}/${NEXUS_REPOSITORY}/static-api:latest"
+                    // Running the container (from the local image built)
+                    bat 'docker run -d -p 3000:3000 --name static-api %NEXUS_DOCKER_REPO%/static-api:latest'
                 }
             }
         }
@@ -53,12 +40,14 @@ pipeline {
         stage('Push Docker Image to Nexus') {
             steps {
                 script {
-                    withCredentials([usernamePassword(credentialsId: 'nexus-credentials', passwordVariable: 'NEXUS_PASSWORD', usernameVariable: 'NEXUS_USERNAME')]) {
-                        bat "echo ${NEXUS_PASSWORD} | docker login -u ${NEXUS_USERNAME} --password-stdin ${NEXUS_URL}"
-                        bat "docker push ${NEXUS_URL}/${NEXUS_REPOSITORY}/static-api:latest"
-                    }
+                    // Login to your Nexus Docker registry using credentials from Jenkins.
+                    // Note: In Windows bat scripts, environment variables are referenced with %VAR%
+                    bat 'docker login %NEXUS_DOCKER_REPO% -u %NEXUS_DOCKER_CRED_USR% -p %NEXUS_DOCKER_CRED_PSW%'
+                    // Push the image to Nexus
+                    bat 'docker push %NEXUS_DOCKER_REPO%/static-api:latest'
                 }
             }
         }
     }
 }
+
