--- a/test/Jenkinsfile
+++ b/test/Jenkinsfile
@@ -2,8 +2,7 @@ pipeline {
     agent any
 
     environment {
-        DOCKERHUB_CREDENTIALS = credentials('dockerhub-credentials')
-        GITHUB_CREDENTIALS = credentials('github-token')
+        NEXUS_CREDENTIALS = credentials('nexus-credentials') // Add Nexus credentials in Jenkins
     }
 
     stages {
@@ -17,25 +16,40 @@ pipeline {
             steps {
                 script {
                     dir('test') {
-                        bat 'docker build -t selimrh125/static-api:latest .'
+                        bat 'docker build -t localhost:8051/docker-hosted/selimrh125/static-api:latest .'
                     }
-                }
-            }
-        }
-        stage('Run Docker Container') {
-            steps {
-                script {
-                    bat 'docker run -d -p 3000:3000 --name static-api selimrh125/static-api:latest'
                 }
             }
         }
 
-        stage('Push Docker Image') {
+        stage('Stop and Remove Previous Container') {
             steps {
                 script {
-                    docker.withRegistry('https://index.docker.io/v1/', 'dockerhub-credentials') {
-                        bat 'docker push selimrh125/static-api:latest'
-                    }
+                    // Stop and remove the container if it exists
+                    bat '''
+                        docker stop static-api || echo "Container does not exist"
+                        docker rm static-api || echo "Container does not exist"
+                    '''
+                }
+            }
+        }
+
+        stage('Run Docker Container') {
+            steps {
+                script {
+                    bat 'docker run -d -p 3000:3000 --name static-api localhost:8051/docker-hosted/selimrh125/static-api:latest'
+                }
+            }
+        }
+
+        stage('Push Docker Image to Nexus') {
+            steps {
+                script {
+                    // Log in to Nexus Docker registry
+                    bat "docker login -u ${NEXUS_CREDENTIALS_USR} -p ${NEXUS_CREDENTIALS_PSW} localhost:8051"
+
+                    // Push the image to Nexus
+                    bat 'docker push localhost:8051/docker-hosted/selimrh125/static-api:latest'
                 }
             }
         }
