--- a/test/Jenkinsfile
+++ b/test/Jenkinsfile
@@ -27,8 +27,8 @@ pipeline {
                 script {
                     // Stop and remove the container if it exists
                     bat '''
-                        docker stop static-api || echo "Container does not exist"
-                        docker rm static-api || echo "Container does not exist"
+                        docker stop static-api || echo "Container does not exist" || true
+                        docker rm static-api || echo "Container does not exist" || true
                     '''
                 }
             }
