--- a/test/Jenkinsfile
+++ b/test/Jenkinsfile
@@ -73,7 +73,7 @@ pipeline {
         stage('Run Docker Container') {
             steps {
                 script {
-                    bat 'docker run -d -p 3000:3000 --name static-api localhost:8051/docker-hosted/selimrh125/static-api:latest'
+                    bat 'docker run -d -p 3000:3000 --name static-api selimrh125/static-api:latest'
                 }
             }
         }
