--- a/test/Jenkinsfile
+++ b/test/Jenkinsfile
@@ -20,7 +20,10 @@ pipeline {
                     dir('test') {
                         // Stop and remove any running containers using the image
                         bat '''
-                            for /f "tokens=*" %i in ('docker ps -a -q --filter ancestor=selimrh125/static-api:latest') do docker stop %i && docker rm %i
+                            for /f "tokens=*" %i in ('docker ps -a -q --filter ancestor=selimrh125/static-api:latest') do (
+                                docker stop %i
+                                docker rm %i
+                            )
                         '''
                         // Check if the Docker image exists and delete it
                         bat '''
