--- a/test/Jenkinsfile
+++ b/test/Jenkinsfile
@@ -59,7 +59,7 @@ pipeline {
             }
         }
 
-        stage('Stop and Remove Previous Container') {
+        stage('Manage Docker Container') {
             steps {
                 script {
                     // Stop and remove the container if it exists
@@ -69,13 +69,7 @@ pipeline {
                             docker rm static-api || echo "Container does not exist"
                         '''
                     }
-                }
-            }
-        }
 
-        stage('Run Docker Container') {
-            steps {
-                script {
                     // Run the container using the original image tag
                     bat 'docker run -d -p 3000:3000 --name static-api selimrh125/static-api:latest'
                 }
